adding reset fields button functionality

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="btns">
                             <button type="button" id="nextModal" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#myNextModal">Next</button>
-                            <button type="button" class="btn btn-default">Reset Fields</button>
+                            <button type="button" class="btn btn-default reset">Reset Fields</button>
                         </div>
                     </div>
                 </div>
